Modified height css props based on the addition of the NoteCard components - Made all global wrapping elements except the row before the content begins 100% height and then made that row a minimum height of 100% to make sure grey background covers screen even when there are no notes but is able to expand when the view expands - Moved global css out of Router.css to App.css

--- a/lambda-notes/src/components/App/App.css
+++ b/lambda-notes/src/components/App/App.css
@@ -1,3 +1,11 @@
+#root > .container-fluid {
+  height: 100%;
+}
+
+#root > .container-fluid > .row {
+  min-height: 100%;
+}
+
 .view {
   background-color: #F3F3F3;
   border: 1px solid #979797;
